# stock-agentic-ai

backEnd/: pyproject.toml
backEnd/app/: agent.py
backEnd/app/nodes/: scrape.py
front-end/: package-lock.json
